--- a/functionary/ui/static/css/functionary.css
+++ b/functionary/ui/static/css/functionary.css
@@ -29,10 +29,14 @@
 .errors {
     color: red;
 }
-.wrap-json {
-    display: block;
-    white-space: pre;
-    margin: 0px;
+.wrap-json,
+pre {
+    overflow-x: auto;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 .missing-variables > ul {
     list-style: inside;
