--- a/functionary/ui/templates/partials/output_json.html
+++ b/functionary/ui/templates/partials/output_json.html
@@ -1,4 +1,4 @@
-<div class="json-container wrap-json" id="json-result"></div>
+<ol class="px-1 json-container wrap-json" id="json-result" />
 <script data-task-result="{{ task.raw_result }}">
     var parsed_result = JSON.parse(document.currentScript.dataset.taskResult)
     var result_element = document.getElementById('json-result')
