--- a/functionary/ui/templates/partials/output_table.html
+++ b/functionary/ui/templates/partials/output_table.html
@@ -1,20 +1,18 @@
 {% if format_error is None %}
-    <div class="table-container">
-        <table id="result_table" class="table is-hoverable is-striped">
-            <thead>
+    <table id="result_table" class="table table-sm table-striped">
+        <thead>
+            <tr>
+                {% for header in formatted_result.headers %}<th scope="col">{{ header }}</th>{% endfor %}
+            </tr>
+        </thead>
+        <tbody class="table-group-divider text-break">
+            {% for row in formatted_result.data %}
                 <tr>
-                    {% for header in formatted_result.headers %}<th>{{ header }}</th>{% endfor %}
+                    {% for col in row %}<td>{{ col }}</td>{% endfor %}
                 </tr>
-            </thead>
-            <tbody>
-                {% for row in formatted_result.data %}
-                    <tr>
-                        {% for col in row %}<td>{{ col }}</td>{% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+            {% endfor %}
+        </tbody>
+    </table>
 {% else %}
     <div>{{ format_error }}</div>
 {% endif %}
