--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -41,8 +41,8 @@
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <div class="container-fluid">
             <div class="row flex-nowrap">
-                <div class="col-auto px-lg-3 px-md-2 px-0 bg-primary shadow">
-                    <div class="d-flex flex-column vh-100">
+                <div class="col-auto px-lg-3 px-md-2 px-2 bg-primary shadow">
+                    <div class="d-flex flex-column vh-100 sticky-top">
                         {% if user.is_authenticated %}
                             <nav class="navbar navbar-dark nav-pills flex-column mb-auto">
                                 <a href="{% url 'ui:home' %}" class="navbar-brand">
@@ -91,7 +91,7 @@
                                 </div>
                             </nav>
                             <hr/>
-                            <nav class="navbar navbar-dark nav-pills flex-column mb-2 pe-5">
+                            <nav class="navbar navbar-dark nav-pills flex-column mb-2 pe-md-5">
                                 <div class="navbar-nav">
                                     <a class="nav-link px-0" href="{% url 'socialaccount_connections' %}">
                                         <i class="fa fa-lg fa-user fa-fw"></i>
@@ -109,7 +109,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col py-3">
+                <div class="col-11 col-md-9 py-3">
                     {% if messages %}
                         {% include "partials/auth_messages.html" %}
                     {% endif %}
