--- a/functionary/ui/templates/partials/env_selector.html
+++ b/functionary/ui/templates/partials/env_selector.html
@@ -1,7 +1,3 @@
-<div hx-trigger="load"
-     hx-get="{% url 'ui:set-environment' %}?next={{ request.get_full_path }}"
-     hx-target="#set-env-form"
-     hx-swap="innerHTML">
-    <form id="set-env-form">
-    </form>
-</div>
+<form id="set-env-form">
+    {% include "forms/environment_selector.html" %}
+</form>
