--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -109,7 +109,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col-11 col-md-9 py-3">
+                <div class="col-11 col-md-9 col-xl-8 col-xxl-7 mx-1 mx-md-3 mx-lg-4 py-3">
                     {% if messages %}
                         {% include "partials/auth_messages.html" %}
                     {% endif %}
