--- a/functionary/ui/templates/core/task_detail.html
+++ b/functionary/ui/templates/core/task_detail.html
@@ -22,18 +22,18 @@
         </div>
         <div class="vstack gap-4 py-2">
             <div>
-                <strong class="fs-4"><i class="fa fa-user fa-sm fa-fw"></i>Creator:</strong>
+                <strong class="fs-4"><i class="fa fa-user fa-sm fa-fw pe-1"></i>Creator:</strong>
                 <p class="ps-4 py-2">
                     {{ task.creator.first_name }} {{ task.creator.last_name }} <span class="text-muted">({{ task.creator.username }})</span>
                     at {{ task.created_at }}
                 </p>
             </div>
             <div>
-                <strong class="fs-4"><i class="fa fa-list fa-sm fa-fw"></i>Parameters:</strong>
+                <strong class="fs-4"><i class="fa fa-list fa-sm fa-fw pe-1"></i>Parameters:</strong>
                 <p class="font-monospace ps-4 py-2 m-0">{{ task.parameters | pprint }}</p>
             </div>
             <div>
-                <strong class="fs-4"><i class="fa fa-clipboard-check fa-sm fa-fw"></i>Result:</strong>
+                <strong class="fs-4"><i class="fa fa-clipboard-check fa-sm fa-fw pe-1"></i>Result:</strong>
                 {% include "partials/task_result_block.html" %}
             </div>
         </div>
