#146 - Added filters for list views (#231)

--- a/functionary/ui/templates/core/scheduledtask_list.html
+++ b/functionary/ui/templates/core/scheduledtask_list.html
@@ -9,5 +9,8 @@
             <span>Create New Scheduled Task</span>
         </a>
     </div>
+    {% if filter %}
+        {% include "partials/list_filter.html" %}
+    {% endif %}
     {% include "partials/table.html" %}
 {% endblock content %}
