--- a/functionary/ui/templates/partials/table.html
+++ b/functionary/ui/templates/partials/table.html
@@ -1,2 +1,3 @@
 {% load django_tables2 %}
-{% render_table table 'django_tables2/bootstrap5.html' %}
+{% load widget_tweaks %}
+<div id="table-list-block" class="table-container">{% render_table table 'django_tables2/bootstrap5.html' %}</div>
