#201 -  UI: Convert package detail page to bootstrap (#240)

--- a/functionary/ui/scss/custom.scss
+++ b/functionary/ui/scss/custom.scss
@@ -36,6 +36,7 @@ $navbar-dark-brand-color: $secondary;
 
 $hr-border-color: $secondary;
 $breadcrumb-divider: quote(">");
+$link-decoration: none;
 
 // 3. Include required Bootstrap stylesheets
 @import "./variables";
