--- a/functionary/ui/templates/builder/build_detail.html
+++ b/functionary/ui/templates/builder/build_detail.html
@@ -6,12 +6,12 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a class="text-decoration-none" href="{% url 'ui:build-list' %}">Build List</a>
+                    <a href="{% url 'ui:build-list' %}">Build List</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">{{ build.package.render_name }}</li>
             </ol>
         </nav>
-        <div class="hstack gap-3 py-2">
+        <div class="hstack gap-3 pt-2 pb-4">
             <h1>
                 <i class="fa fa-wrench fa-xl"></i>
                 {{ build.package.render_name }}
@@ -23,7 +23,7 @@
         </div>
         <div class="vstack gap-4 py-2">
             <div>
-                <strong class="fs-4"><i class="fa fa-user fa-sm fa-fw pe-1"></i>Creator:</strong>
+                <strong class="fs-4"><i class="fa fa-user fa-sm fa-fw pe-1"></i>Creator</strong>
                 <p class="ps-4 py-2">
                     {{ build.creator.first_name }} {{ build.creator.last_name }} <span class="text-muted">({{ build.creator.username }})</span>
                     at {{ build.created_at }}
@@ -31,13 +31,13 @@
             </div>
             {% if build.updated_at %}
                 <div>
-                    <strong class="fs-4"><i class="fa fa-clock-rotate-left fa-sm fa-fw pe-1"></i>Last Updated:</strong>
+                    <strong class="fs-4"><i class="fa fa-clock-rotate-left fa-sm fa-fw pe-1"></i>Last Updated</strong>
                     <p class="ps-4 py-2">{{ build.updated_at }}</p>
                 </div>
             {% endif %}
             {% if build_log.log %}
                 <div>
-                    <strong class="fs-4"><i class="fa fa-book fa-sm fa-fw pe-1"></i>Build Log:</strong>
+                    <strong class="fs-4"><i class="fa fa-book fa-sm fa-fw pe-1"></i>Build Log</strong>
                     <div class="ps-4">
                         <div class="form-switch py-3">
                             <input class="form-check-input"
