--- a/functionary/ui/templates/partials/task_result_block.html
+++ b/functionary/ui/templates/partials/task_result_block.html
@@ -22,7 +22,7 @@
             </div>
             {% include "partials/task_result.html" %}
         {% else %}
-            <i id="result_indicator" class="fas fa-spinner fa-spin fa-2x ml-4"></i>
+            <i id="result_indicator" class="fas fa-spinner fa-spin fa-2x"></i>
         {% endif %}
     </div>
 </div>
