#201 - UI: Switch function detail page to bootstrap (#246)

--- a/functionary/ui/scss/custom.scss
+++ b/functionary/ui/scss/custom.scss
@@ -19,7 +19,7 @@ $display-font-sizes: (1: 7rem, 2: 4rem);
 $primary: #3E5F8E;
 $secondary: #FFFFFF;
 $danger: #8A1B19;
-$warning: #FFCDA3;
+$warning: #FFA270;
 $info: #7CAFB6;
 $success: #5A7A57;
 $light: #F7F8F8;
