#201 - UI: Convert workflow detail page to bootstrap (#252)

--- a/functionary/ui/scss/custom.scss
+++ b/functionary/ui/scss/custom.scss
@@ -20,7 +20,7 @@ $primary: #3E5F8E;
 $secondary: #FFFFFF;
 $danger: #8A1B19;
 $warning: #FFA270;
-$info: #7CAFB6;
+$info: #407f87;
 $success: #5A7A57;
 $light: #F7F8F8;
 $dark: #343E40;
