--- a/functionary/ui/templates/builder/build_detail.html
+++ b/functionary/ui/templates/builder/build_detail.html
@@ -13,7 +13,7 @@
         </nav>
         <div class="hstack gap-3 pt-2 pb-4">
             <h1>
-                <i class="fa fa-wrench fa-xl"></i>
+                <i class="fa fa-wrench"></i>
                 {{ build.package.render_name }}
             </h1>
             <div>
