--- a/functionary/ui/templates/core/package_detail.html
+++ b/functionary/ui/templates/core/package_detail.html
@@ -10,7 +10,7 @@
             </ol>
         </nav>
         <h1 class="pt-2 pb-4">
-            <i class="fa fa-cubes fa-xl"></i>
+            <i class="fa fa-cubes"></i>
             {{ package.render_name }}
         </h1>
         <div class="vstack gap-4 py-2">
