--- a/functionary/ui/templates/core/task_detail.html
+++ b/functionary/ui/templates/core/task_detail.html
@@ -12,7 +12,7 @@
         </nav>
         <div class="hstack gap-3 pt-2 pb-4">
             <h1>
-                <i class="fa fa-digital-tachograph fa-xl"></i>
+                <i class="fa fa-digital-tachograph"></i>
                 {{ task.function.render_name }}
             </h1>
             <div>
