--- a/functionary/ui/templates/forms/workflow/parameter_edit.html
+++ b/functionary/ui/templates/forms/workflow/parameter_edit.html
@@ -1,57 +1,42 @@
-{# djlint: off #}
-{% extends "partials/modal_old.html" %}
+{% extends "partials/modal.html" %}
 {% load widget_tweaks %}
-
 {% block modal_title %}
     Workflow Parameter
 {% endblock modal_title %}
-
-{% block form_declaration %}
-    {% if workflowparameter %}
-        <form id="parameter-form" method="post" hx-post="{% url 'ui:workflowparameter-edit' workflow.pk workflowparameter.pk %}" hx-target="#form-modal" hx-swap="outerHTML" enctype="multipart/form-data">
-    {% else %}
-        <form id="parameter-form" method="post" hx-post="{% url 'ui:workflowparameter-create' workflow.pk %}" hx-target="#form-modal" hx-swap="outerHTML" enctype="multipart/form-data">
-    {% endif %}
-    {% csrf_token %}
-{% endblock form_declaration %}
-
 {% block modal_content %}
-    <div class="field">
-        <label class="label" for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
-        <div class="control">{% render_field form.name class="input" %}</div>
-        <div class="help is-danger">{{ form.name.errors }}</div>
-    </div>
-    <div class="field">
-        <label class="label" for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
-        <div class="control">{% render_field form.description class="input" %}</div>
-        <div class="help is-danger">{{ form.description.errors }}</div>
-    </div>
-    <div class="columns">
-        <div class="column">
-            <div class="field">
-                <label class="label" for="{{ form.parameter_type.id_for_label }}">{{ form.parameter_type.label }}</label>
-                <div class="control select">{{ form.parameter_type }}</div>
-                <div class="help is-danger">{{ form.parameter_type.errors }}</div>
-            </div>
+    <form id="parameter-form"
+          method="post"
+          hx-post="{% if workflowparameter %}{% url 'ui:workflowparameter-edit' workflow.pk workflowparameter.pk %}{% else %}{% url 'ui:workflowparameter-create' workflow.pk %}{% endif %}"
+          hx-target="#form-modal"
+          hx-swap="outerHTML"
+          enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label class="form-label" for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+            {% render_field form.name class="form-control" placeholder=form.name.label %}
+            <div class="text-danger">{{ form.name.errors }}</div>
         </div>
-        <div class="column">
-            <div class="field">
-                <label class="label" for="{{ form.required.id_for_label }}">{{ form.required.label }}</label>
-                <div class="control">{{ form.required }}</div>
-            </div>
+        <div class="mb-3">
+            <label class="form-label" for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
+            {% render_field form.description class="form-control" placeholder=form.description.label %}
+            <div class="text-danger">{{ form.description.errors }}</div>
         </div>
-    </div>
-    <div>
+        <div class="mb-3">
+            <label class="form-label" for="{{ form.parameter_type.id_for_label }}">{{ form.parameter_type.label }}</label>
+            {% render_field form.parameter_type class="form-select" aria-label=form.parameter_type.label %}
+            <div class="text-danger">{{ form.parameter_type.errors }}</div>
+        </div>
+        <div class="mb-3">
+            <label class="form-check-label" for="{{ form.required.id_for_label }}">{{ form.required.label }}</label>
+            {% render_field form.required class="form-check-input" placeholder=form.required.label type="checkbox" %}
+        </div>
         <input type="hidden" name="workflow" value="{{ workflow.id }}"/>
-    </div>
-    {{ form.non_field_errors }}
+        {{ form.non_field_errors }}
+    </form>
 {% endblock modal_content %}
-
 {% block modal_footer %}
-    <button class="button" type="submit" value="Save">Save</button>
+    <button class="btn btn-primary"
+            type="submit"
+            form="parameter-form"
+            value="Save">Save</button>
 {% endblock modal_footer %}
-
-{% block form_end %}
-</form>
-{% endblock form_end %}
-{# djlint: on #}
