--- a/functionary/ui/templates/account/login.html
+++ b/functionary/ui/templates/account/login.html
@@ -75,7 +75,7 @@
                                 {{ form.non_field_errors }}
                             </div>
                             <div class="card-footer text-center bg-body">
-                                <button class="btn btn-success text-light" form="loginForm" type="submit">Sign In</button>
+                                <button class="btn btn-primary text-light" form="loginForm" type="submit">Sign In</button>
                             </div>
                         </div>
                     {% endblock content %}
