--- a/functionary/ui/templates/forms/workflow/workflow_edit.html
+++ b/functionary/ui/templates/forms/workflow/workflow_edit.html
@@ -10,12 +10,12 @@
           hx-target="#form-modal"
           hx-swap="outerHTML">
         {% csrf_token %}
-        <div class="mb-1">
+        <div class="mb-3">
             <label for="{{ form.name.id_for_label }}" class="form-label">{{ form.name.label }}</label>
             {% render_field form.name class="form-control" placeholder=form.name.label %}
         </div>
         {{ form.name.errors }}
-        <div class="mb-1">
+        <div class="mb-3">
             <label for="{{ form.description.id_for_label }}" class="form-label">{{ form.description.label }}</label>
             {% render_field form.description class="form-control" placeholder=form.description.label %}
         </div>
@@ -27,7 +27,7 @@
     </form>
 {% endblock modal_content %}
 {% block modal_footer %}
-    <button class="btn btn-success" type="submit" form="workflow-form">
+    <button class="btn btn-primary" type="submit" form="workflow-form">
         {% if workflow %}
             Save
         {% else %}
