--- a/functionary/ui/templates/partials/table.html
+++ b/functionary/ui/templates/partials/table.html
@@ -1,3 +1,3 @@
 {% load django_tables2 %}
 {% load widget_tweaks %}
-<div id="table-list-block" class="table-container">{% render_table table 'django_tables2/bootstrap5.html' %}</div>
+<div id="table-list-block">{% render_table table 'django_tables2/bootstrap5.html' %}</div>
