#201 - UI: Convert schedule detail to bootstrap (#254)

--- a/functionary/ui/templates/core/task_detail.html
+++ b/functionary/ui/templates/core/task_detail.html
@@ -20,7 +20,7 @@
                 <span class="fs-5">{{ task.status }}</span>
             </div>
         </div>
-        <div class="vstack gap-4 py-2">
+        <div class="vstack gap-2 py-2">
             <div>
                 <strong class="fs-4"><i class="fa fa-user fa-sm fa-fw pe-1"></i>Creator</strong>
                 <p class="ps-4 py-2">
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <strong class="fs-4"><i class="fa fa-list fa-sm fa-fw pe-1"></i>Parameters</strong>
-                <p class="font-monospace ps-4 py-2 m-0">{{ task.parameters | pprint }}</p>
+                <p class="font-monospace ps-4 py-2">{{ task.parameters | pprint }}</p>
             </div>
             <div>
                 <strong class="fs-4"><i class="fa fa-clipboard-check fa-sm fa-fw pe-1"></i>Result</strong>
