--- a/functionary/ui/templates/partials/workflows/step_list.html
+++ b/functionary/ui/templates/partials/workflows/step_list.html
@@ -1,4 +1,4 @@
-<div id="workflow-steps" class="ps-4 py-2">
+<div id="workflow-steps" class="ps-4 pt-2 pb-4">
     <!--TODO: A table is not really suitable for this data. This is a placeholder-->
     <div id="tableSteps" class="table-container">
         <table class="table table-striped table-sm">
