--- a/functionary/ui/templates/core/function_detail.html
+++ b/functionary/ui/templates/core/function_detail.html
@@ -19,7 +19,7 @@
         <i class="fa fa-cube fa-xl"></i>
         <span>{{ function.render_name }}</span>
     </h1>
-    <div class="vstack gap-4 py-2">
+    <div class="vstack gap-2 py-2">
         {% if not function.active %}
             <div class="alert alert-warning text-center" role="alert">
                 <i class="fa fa-triangle-exclamation"></i>
@@ -49,7 +49,7 @@
                     <strong class="fs-4"><i class="fa fa-pencil-alt fa-sm fa-fw pe-1"></i>Create Task</strong>
                     <div class="ps-4 py-2">
                         <div class="row">
-                            <div class="col-5">
+                            <div class="col col-lg-10 col-xl-9 col-xxl-8">
                                 <form id="taskCreateForm"
                                       method="post"
                                       action="{% url 'ui:function-execute' %}"
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         {% if missing_variables %}
-                            <div class="alert alert-danger">
+                            <div class="alert alert-danger" role="alert">
                                 <p>Tasking this function may not work as expected; the following variables are missing:</p>
                                 <ul>
                                     {% for missing in missing_variables %}<li>{{ missing }}</li>{% endfor %}
