--- a/functionary/ui/templates/partials/workflows/parameter_list.html
+++ b/functionary/ui/templates/partials/workflows/parameter_list.html
@@ -1,4 +1,4 @@
-<div id="tableParameter" class="ps-4 py-2">
+<div id="tableParameter" class="ps-4 pt-2 pb-4">
     <div class="table-container">
         <table class="table table-striped table-sm">
             <thead>
